--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
 main .container .fieldsCard {
     width: 20%;
     padding: 20px 35px;
-    border: 1px solid #000000bd;
+    border: 1px solid #000000b4;
     border-radius: 6px;
     margin: 20px auto;
     display: flex;
@@ -63,7 +63,7 @@ main .container .fieldsCard {
 
 .categorySelect {
     border-radius: 6px;
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.363);
     width: 100%;
     height: 30px;
     margin-right: 5px;
@@ -106,7 +106,7 @@ textarea {
 
 .addCategoryBtn {
     cursor: pointer;
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.536);
     border-radius: 6px;
 }
 
