--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
 body {
     margin: 0;
     width: 100%;
-    background-color: var(--main-color);
+    background-color: var(--main-color) important!; 
+    background:url('/img/outrun-neon-dark-background-purple-3840x2160-4523\ \(1\).jpg') cover/center;
     font-family: 'Lobster', cursive;
     
 }
